# humanIF

./: .gitignore  Dockerfile  README.MD  README.md  pyproject.toml  requirements.txt  setup.py  upload_results.yaml
HREF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
HREF/LLM-as-a-Judge/: create_config.py
HREF/evaluate/: basic_annotators.py  calculate_human_agreement_rate.py  evaluate.py
HREF/generate/: generate.py  utils.py
NAMME/LLM-as-a-Judge/: create_config.py
NAMME/annotators/: config_settings.json  config_template.yaml  create_config.py
NAMME/annotators/prompt_templates/: basic_no_reference.txt  basic_w_reference.txt
NAMME/evaluate/: basic_annotators.py  calculate_human_agreement_rate.py  evaluate.py
NAMME/generate/: generate.py  utils.py
href/: test_fbgemm.py
href/evaluate/: calculate_human_agreement_rate.py  evaluate.py
href/evaluation/: basic_annotators.py  calculate_human_agreement_rate.py  evaluate.py  evaluate_new.py  evaluate_old.py  evaluators.py
href/generate/: generate.py  templates.py  utils.py
href/generation/: generate.py  generate_loss.py  generate_new.py  generate_old.py  templates.py  utils.py
href/generation/configs-t=0.0/: Llama-2-13b-chat-hf.yaml  Llama-3.1-8B-Instruct.yaml  Mistral-Large-Instruct-2407.yaml  (+4 more)
href/llm-as-a-judge/: create_config.py
href/llm_as_a_judge/: create_config.py  model_settings.json
scripts/: build_leaderboard.py  compare_annotators.py  generate_loss_for_human_agreement.py  generate_loss_for_human_agreement_vllm.py  submit_through_interactive.py  upload_results_to_huggingface.py
(+98 files in other folders)
